# mcking-codespace

./: .gitignore  .gitmodules  CONTEXT.md  MCKING_CONTEXT.md  README.md  run.sh
.github/workflows/: pages.yml
cpp/: CONTEXT.md  README.md  gpt.cpp
python/: CONTEXT.md  README.md  aurora.py  cellular_automata.py  cyberdash.py  format_context.md  fractal_ascii.py  hyperspace.py  lambda_tree.py  lifelike.py  lorenz.py  mandelbrot.py  matrix_rain.py  maze_generator.py  nocturne.py  password_generator.py  plasma.py  snake.py  test_fractal.py  test_password_generator.py
python/llm-proxy/: .env.example  CONTEXT.md  README.md  main.py  requirements.txt  seed.py
python/llm-proxy/cli/: pyproject.toml
python/llm-proxy/cli/src/apikey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/llm-proxy/cli/src/cli/: __init__.py  client.py  config.py  main.py
python/llm-proxy/cli/src/llm_proxy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/llm-proxy/config/: CONTEXT.md  settings.py
python/llm-proxy/docs/: CONTEXT.md
scripts/: CONTEXT.md  build.ps1  sync-github.js
web/: CONTEXT.md  README.md  diagramas.html  index.html  mcking-codespace.drawio
web/cellular-automata/: CONTEXT.md  index.html
web/chat-codec/: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  package.json
web/chat-codec/cli/: check-peerjs.js  cli-chat.js  find-peerjs-defaults.js  package-lock.json  package.json  test-decode.mjs  test-hub-only.cjs  test-p2p.cjs  test-peer.mjs
web/chat-codec/public/: app.js  codec.js  codec_share.js  codec_share.wasm  index.html  style.css  utils.js  webrtc.js
web/chat-codec/shared/: codec-bridge.cjs  hash.js
web/chat-codec/test/: test-protocol.cjs  test.cjs
web/chat-codec/wasm/: build.sh  codec_wrapper.cpp
web/diagrams/: CONTEXT.md
web/fluid-sim/: CONTEXT.md  index.html
web/particle-life/: CONTEXT.md  index.html
web/thunderstorm/: CONTEXT.md  index.html
(+37 files in other folders)
