[project]
name = "llm-proxy-cli"
version = "0.1.0"
description = "CLI for managing the LLM Proxy — API keys, tokens, mappings, and usage"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
llm-proxy = "cli.main:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
